Added treeview and dashboard in teacher portal

--- a/template.html
+++ b/template.html
@@ -23,19 +23,53 @@
         <main >
             <div class = "sidebar" id = "sidebar">
                 <ul class = "sidebar-li" id = "sidebar-li">
-                   
+                  <span class = "subject-li"><li class = "subjects"> <button class= "li-button"> + </button> Subject-1 </li>
+                   <ul class = "assignments-li" id = "assignments-li">
+                        <li> <a href="#"> A1 </a> </li>
+                        <li> <a href= "#"> A2 </a> </li>
+                   </ul></span>
+                
+                   <span class = "subject-li"> <li class = "subjects"><button class= "li-button"> + </button> Subject-2 </li>
+                   <ul class = "assignments-li" id = "assignments-li">
+                        <li> <a href="#"> A1 </a> </li>
+                        <li> <a href= "#"> A2 </a> </li>
+                   </ul></span>
                 </ul>
             </div>
             <div class = "dashboard" id = "dashbaord">
-                <h2> Recent Assignments </h2>
+                <h2 class="heading"> Recent Assignments </h2>
                 <div class = "line"></div>
-                <table>
+                <table class="table">
                     <tr>
+                        <th> S.No </th>
                         <th> Class </th>
                         <th> Subject </th>
                         <th> Given on </th>
                         <th> Submission </th>
+                        <th> View </th>
                     </tr>
+                    <tr>
+                        <td> 1</td>
+                        <td> IT-C </td>
+                        <td> Cryptography and Network Security </td>
+                        <td> 12/2/18</td>
+                        <td> 24/2/18</td>
+                    </tr>
+                    <tr>
+                        <td> 2 </td>
+                        <td> IT-C </td>
+                        <td> Cryptography and Network Security </td>
+                        <td> 12/2/18</td>
+                        <td> 24/2/18</td>
+                    </tr>
+                    <tr>
+                        <td> 3 </td>
+                        <td> IT-C </td>
+                        <td> Cryptography and Network Security </td>
+                        <td> 12/2/18</td>
+                        <td> 24/2/18</td>
+                    </tr>
+
             </div>
         </main>
         <script type="text/javascript" src="script.js"></script>
