--- a/template.html
+++ b/template.html
@@ -23,13 +23,13 @@
         <main >
             <div class = "sidebar" id = "sidebar">
                 <ul class = "sidebar-li" id = "sidebar-li">
-                  <span class = "subject-li"><li class = "subjects"> <button class= "li-button"> + </button> Subject-1 </li>
+                  <span class = "subject-li"><li class = "subjects"> <button class= "li-button" value = "0"> + </button> Subject-1 </li>
                    <ul class = "assignments-li" id = "assignments-li">
                         <li> <a href="#"> A1 </a> </li>
                         <li> <a href= "#"> A2 </a> </li>
                    </ul></span>
                 
-                   <span class = "subject-li"> <li class = "subjects"><button class= "li-button"> + </button> Subject-2 </li>
+                   <span class = "subject-li"> <li class = "subjects"><button class= "li-button" value = "1"> + </button> Subject-2 </li>
                    <ul class = "assignments-li" id = "assignments-li">
                         <li> <a href="#"> A1 </a> </li>
                         <li> <a href= "#"> A2 </a> </li>
