Added create assignment and create subject button

--- a/template.html
+++ b/template.html
@@ -22,14 +22,18 @@
         </navbar>
         <main >
             <div class = "sidebar" id = "sidebar">
+                <div class = "side-panel" id = "side-panel">
+                    <button id = "create-assignment" class = "create-btn">+ Assignment </button>
+                    <button id = "create-subject" class = "create-btn"> + Subject </button>
+                </div> 
                 <ul class = "sidebar-li" id = "sidebar-li">
-                  <span class = "subject-li"><li class = "subjects"> <button class= "li-button" value = "0"> + </button> Subject-1 </li>
+                  <span class = "subject-li"><li class = "subjects"> <button class= "li-button" value = "0"> + </button>Subject-1</li>
                    <ul class = "assignments-li" id = "assignments-li">
                         <li> <a href="#"> A1 </a> </li>
                         <li> <a href= "#"> A2 </a> </li>
                    </ul></span>
                 
-                   <span class = "subject-li"> <li class = "subjects"><button class= "li-button" value = "1"> + </button> Subject-2 </li>
+                   <span class = "subject-li"> <li class = "subjects"><button class= "li-button" value = "1"> + </button>Subject-2</li>
                    <ul class = "assignments-li" id = "assignments-li">
                         <li> <a href="#"> A1 </a> </li>
                         <li> <a href= "#"> A2 </a> </li>
@@ -54,6 +58,7 @@
                         <td> Cryptography and Network Security </td>
                         <td> 12/2/18</td>
                         <td> 24/2/18</td>
+                        <td> <a href="#"> view </a> </td>
                     </tr>
                     <tr>
                         <td> 2 </td>
@@ -61,6 +66,7 @@
                         <td> Cryptography and Network Security </td>
                         <td> 12/2/18</td>
                         <td> 24/2/18</td>
+                        <td> <a href="#"> view </a> </td>
                     </tr>
                     <tr>
                         <td> 3 </td>
@@ -68,6 +74,7 @@
                         <td> Cryptography and Network Security </td>
                         <td> 12/2/18</td>
                         <td> 24/2/18</td>
+                        <td> <a href = "#"> view </a> </td>
                     </tr>
 
             </div>
