--- a/template.html
+++ b/template.html
@@ -20,7 +20,7 @@
         <navbar>
                 <div class = "navbar">
                     <div class = "left navbar-design">
-                        <a href="#"> Logo </a>
+                        <a href="#"> ATS </a>
                         <a href="#"> Dashboard</a>
                     </div>
                     <div class = "right navbar-design">
@@ -55,6 +55,7 @@
                     <table class="table">
                         <tr>
                             <th> S.No </th>
+                            <th> Name </th>
                             <th> Class </th>
                             <th> Subject </th>
                             <th> Given on </th>
@@ -63,6 +64,7 @@
                         </tr>
                         <tr>
                             <td> 1</td>
+                            <td> Assignment-1 </td>
                             <td> IT-C </td>
                             <td> Cryptography and Network Security </td>
                             <td> 12/2/18</td>
@@ -71,6 +73,7 @@
                         </tr>
                         <tr>
                             <td> 2 </td>
+                            <td> Assignment-2 </td>
                             <td> IT-C </td>
                             <td> Cryptography and Network Security </td>
                             <td> 12/2/18</td>
@@ -79,6 +82,7 @@
                         </tr>
                         <tr>
                             <td> 3 </td>
+                            <td> Assignment-3 </td>
                             <td> IT-C </td>
                             <td> Cryptography and Network Security </td>
                             <td> 12/2/18</td>
