--- a/login.html
+++ b/login.html
@@ -2,14 +2,21 @@
 <html lang="en">
 <head>
     <title>Login</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> 
     <link rel="stylesheet" href="login-style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <form action = "#" method = "post"  class = "form">
-        <label for  = "username" class = "form-component">Username</label><input type = "text" id = "username" class = "form-component" ></input>
-        <label for = "password"class = "form-component"> password</label><input type = "password" id = "password" class = "form-component"></input>
-        <button type = "submit" id = "submit-btn" class = "form-component submit-btn">Submit</button>
-    </form>
+   <div class = "login-form">
+       
+        <form action = "#" method = "post"  class = "form">
+                <h1 class = "heading"> Login </h1>
+                <label for  = "username" class = "form-component"> Username </label><input type = "text" id = "username" class = "form-component" ></input>
+                <br>
+                <label for = "password"class = "form-component"> Password </label>&nbsp<input type = "password" id = "password" class = "form-component"></input>
+                <br>
+                <button type = "submit" id = "submit-btn" class = "form-component submit-btn">Submit</button>
+            </form>
+   </div> 
     <script src = "login.js"></script>
 </body>
 </html>
