--- a/template.html
+++ b/template.html
@@ -37,7 +37,7 @@
                 <ul class = "sidebar-li" id = "sidebar-li">
                   <span class = "subject-li"><li class = "subjects"> <button class= "li-button" value = "0"> + </button>Subject-1</li>
                    <ul class = "assignments-li" id = "assignments-li">
-                        <li> <a href="#"> A1 </a> </li>
+                        <li> <a href="#" id = "assignment-1"> A1 </a> </li>
                         <li> <a href= "#"> A2 </a> </li>
                    </ul></span>
                 
