--- a/template.html
+++ b/template.html
@@ -21,7 +21,7 @@
                 <div class = "navbar">
                     <div class = "left navbar-design">
                         <a href="#"> ATS </a>
-                        <a href="#"> Dashboard</a>
+                        <a href="#" id = "dashboard-navbar"> Dashboard</a>
                     </div>
                     <div class = "right navbar-design">
                         <a href="#">Logout</a>
@@ -35,17 +35,7 @@
                     <button id = "create-subject" class = "create-btn"> + Subject </button>
                 </div> 
                 <ul class = "sidebar-li" id = "sidebar-li">
-                  <span class = "subject-li"><li class = "subjects"> <button class= "li-button" value = "0"> + </button>Subject-1</li>
-                   <ul class = "assignments-li" id = "assignments-li">
-                        <li> <a href="#" id = "assignment-1"> A1 </a> </li>
-                        <li> <a href= "#"> A2 </a> </li>
-                   </ul></span>
-                
-                   <span class = "subject-li"> <li class = "subjects"><button class= "li-button" value = "1"> + </button>Subject-2</li>
-                   <ul class = "assignments-li" id = "assignments-li">
-                        <li> <a href="#"> A1 </a> </li>
-                        <li> <a href= "#"> A2 </a> </li>
-                   </ul></span>
+                    
                 </ul>
             </div>
             <div class = "dashboard" id = "dashboard">
@@ -70,24 +60,6 @@
                             <td> 12/2/18</td>
                             <td> 24/2/18</td>
                             <td> <a href="#"> view </a> </td>
-                        </tr>
-                        <tr>
-                            <td> 2 </td>
-                            <td> Assignment-2 </td>
-                            <td> IT-C </td>
-                            <td> Cryptography and Network Security </td>
-                            <td> 12/2/18</td>
-                            <td> 24/2/18</td>
-                            <td> <a href="#"> view </a> </td>
-                        </tr>
-                        <tr>
-                            <td> 3 </td>
-                            <td> Assignment-3 </td>
-                            <td> IT-C </td>
-                            <td> Cryptography and Network Security </td>
-                            <td> 12/2/18</td>
-                            <td> 24/2/18</td>
-                            <td> <a href = "#"> view </a> </td>
                         </tr>
                     </table>
                 </div>
